--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,22 +7,21 @@
   min-height: 100vh;
 }
 
-.description {
+.action {
   display: inherit;
   justify-content: inherit;
   align-items: inherit;
-  font-size: 0.85rem;
+  font-size: 1rem;
   max-width: var(--max-width);
   width: 100%;
   z-index: 2;
-  font-family: var(--font-mono);
 }
 
-.description a {
+.action a {
   gap: 0.5rem;
 }
 
-.description p {
+.action p {
   position: relative;
   margin: 0;
   padding: 1rem;
@@ -31,9 +30,8 @@
   border-radius: var(--border-radius);
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.link {
+  color: #1a5707;
 }
 
 .grid {
@@ -153,23 +151,23 @@
     height: 300px;
   }
 
-  .description {
+  .action {
     font-size: 0.8rem;
   }
 
-  .description a {
+  .action a {
     padding: 1rem;
   }
 
-  .description p,
-  .description div {
+  .action p,
+  .action div {
     display: flex;
     justify-content: center;
     position: fixed;
     width: 100%;
   }
 
-  .description p {
+  .action p {
     align-items: center;
     inset: 0 0 auto;
     padding: 2rem 1rem 1.4rem;
@@ -185,7 +183,7 @@
     backdrop-filter: blur(24px);
   }
 
-  .description div {
+  .action div {
     align-items: flex-end;
     pointer-events: none;
     inset: auto 0 0;
