--- a/src/app/components/css/ListOfBooks.module.css
+++ b/src/app/components/css/ListOfBooks.module.css
@@ -2,78 +2,85 @@
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: repeat(4, minmax(25%, auto));
-    max-width: 100%;
-    width: var(--max-width);
-}  
+  display: grid;
+  grid-template-columns: repeat(4, minmax(25%, auto));
+  max-width: 100%;
+  width: var(--max-width);
+}
 
 .card {
-    padding: 1rem 1.2rem;
-    border-radius: var(--border-radius);
-    background: rgba(var(--card-rgb), 0);
-    border: 1px solid rgba(var(--card-border-rgb), 0);
-    transition: background 200ms, border 200ms;
-    text-align: center;
-  }
-  
-  .card span {
-    display: inline-block;
-    transition: transform 200ms;
-  }
-  
-  .card h3 {
-    margin-bottom: 0.7rem;
-  }
-  
-  .card p {
-    margin: 0;
-    opacity: 0.6;
-    font-size: 0.9rem;
-    line-height: 1.5;
-    max-width: 30ch;
-    text-wrap: balance;
-  }
+  padding: 1rem 1.2rem;
+  border-radius: var(--border-radius);
+  background: rgba(var(--card-rgb), 0);
+  border: 1px solid rgba(var(--card-border-rgb), 0);
+  transition: background 200ms, border 200ms;
+  text-align: center;
+}
+
+.card span {
+  display: inline-block;
+  transition: transform 200ms;
+}
+
+.card h3 {
+  margin-bottom: 0.7rem;
+}
+
+.card p {
+  margin: 0;
+  opacity: 0.6;
+  font-size: 0.9rem;
+  line-height: 1.5;
+  max-width: 30ch;
+  text-wrap: balance;
+}
+
+.message {
+  font-size: 20px;
+  padding: 32px;
+  margin-bottom: 60px;
+  text-align: center;
+}
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
-    .card:hover {
-      background: rgba(var(--card-rgb), 0.1);
-      border: 1px solid rgba(var(--card-border-rgb), 0.15);
-    }
-  
-    .card:hover h3 {
-      transform: scale(1.1);
-    }
+  .card:hover {
+    background: rgba(var(--card-rgb), 0.1);
+    border: 1px solid rgba(var(--card-border-rgb), 0.15);
   }
-  
-  @media (prefers-reduced-motion) {
-    .card:hover h3 {
-      transform: none;
-    }
+
+  .card:hover h3 {
+    transform: scale(1.1);
   }
+}
+
+@media (prefers-reduced-motion) {
+  .card:hover h3 {
+    transform: none;
+  }
+}
 
 /* Mobile */
 @media (max-width: 700px) {
-    .grid {
-        grid-template-columns: 1fr;
-        margin-bottom: 120px;
-        max-width: 320px;
-        text-align: center;
-    }
+  .grid {
+    grid-template-columns: 1fr;
+    margin-bottom: 120px;
+    max-width: 320px;
+    text-align: center;
+  }
 
-    .card {
-        padding: 1rem 2.5rem;
-    }
-    
-    .card h3 {
+  .card {
+    padding: 1rem 2.5rem;
+  }
+
+  .card h3 {
     margin-bottom: 0.5rem;
-    }
+  }
 }
-  
+
 /* Tablet and Smaller Desktop */
 @media (min-width: 701px) and (max-width: 1120px) {
-    .grid {
-        grid-template-columns: repeat(2, 50%);
-    }
+  .grid {
+    grid-template-columns: repeat(2, 50%);
+  }
 }
