--- a/src/app/components/css/ListOfBooks.module.css
+++ b/src/app/components/css/ListOfBooks.module.css
@@ -15,6 +15,7 @@
   border: 1px solid rgba(var(--card-border-rgb), 0);
   transition: background 200ms, border 200ms;
   text-align: center;
+  margin: 0 auto;
 }
 
 .card span {
@@ -24,6 +25,7 @@
 
 .card h3 {
   margin-bottom: 0.7rem;
+  font-size: 20px;
 }
 
 .card p {
