--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 98, 198, 121;
-  --background-end-rgb: 255, 255, 255;
+  --background-end-rgb: 222, 222, 222;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -97,6 +97,11 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+[data-theme="dark"] body {
+  background-color: #000;
+  color: #9353d3;
 }
 
 a {
