--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -25,9 +25,7 @@
   position: relative;
   margin: 0;
   padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+  font-size: 18px;
 }
 
 .center {
@@ -71,14 +69,7 @@
     align-items: center;
     inset: 0 0 auto;
     padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
     background-clip: padding-box;
     backdrop-filter: blur(24px);
   }
@@ -87,7 +78,7 @@
     align-items: flex-end;
     inset: auto 0 0;
     padding: 2rem;
-    height: 200px;
+    height: 160px;
     background: linear-gradient(
       to bottom,
       transparent 0%,
