Comment prefers-color-scheme

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -92,8 +92,9 @@
 @media (min-width: 701px) and (max-width: 1120px) {
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   .logo {
     filter: invert(1);
   }
-}
+}*/
