--- a/src/app/components/css/ListOfAlphabet.module.css
+++ b/src/app/components/css/ListOfAlphabet.module.css
@@ -13,7 +13,7 @@
 
 .letterActive {
   background: rgba(var(--card-rgb), 0.1);
-  color: #ffcd82;
+  color: #f5a525;
 }
 
 .pipe {
@@ -24,7 +24,7 @@
 @media (hover: hover) and (pointer: fine) {
   .letter:hover {
     background: rgba(var(--card-rgb), 0.1);
-    color: #ffcd82;
+    color: #f5a525;
   }
 }
 
